kubernetes/k8s-deployment.yaml
###################################
# abcall-payment-api
###################################
apiVersion: apps/v1
kind: Deployment
metadata:
  name: abcall-web
  labels:
    app: abcall-web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: abcall-web
  template:
    metadata:
      labels:
        app: abcall-web
    spec:
      containers:
        - name:  abcall-web
          image: abcall.azurecr.io/abcall-web:1.0.0
          ports:
            - containerPort: 80
          imagePullPolicy: Always

---
apiVersion: v1
kind: Service
metadata:
  name: abcall-web-service
spec:
  type: LoadBalancer
  selector:
    app: abcall-web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
